--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "html-to-object",
+  "name": "html-to-obj",
   "version": "1.0.0",
   "description": "html to object",
   "main": "index.js",
