--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
   "name": "html-to-obj",
-  "version": "1.1.0",
+  "version": "1.2.3",
   "description": "html to object",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx webpack"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/git-Superman/html-to-object"
   },
   "keywords": [
-    "html to object"
+    "html", "object"
   ],
   "author": "qian2025",
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.12"
+  },
+  "devDependencies": {
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   }
 }
